# ds-cholera-pdf-scraper

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  analyze_raw_responses.py  backfill-accuracy  debug_realtime_comparison.py  debug_realtime_ipython.py  extracted_text.txt  prompt_cli.py  pyproject.toml  recover_json.py  requirements-dev.txt  requirements.txt  setup.py  test_csv_reader.py  test_interactive.py  test_quick.py  test_single_pdf.py  test_text_extraction.py  test_url_extraction.py
.github/: WORKFLOWS.md  copilot-instructions-promptlogging.md  copilot-instructions.md
.github/workflows/: download-latest-who-pdf.yml  extract-from-pdf.yml  post-process-extractions.yml  requirements.txt  rule-based-extract.yml  test-openai-connection.yml
archive/: README.md
book_cholera_scraping/: 01_scraping_results.qmd  02_notebookllm_comparison.qmd  03_batch_run_analysis.qmd  04_realtime_comparison.py  _publish.yml  _quarto.yml  models.qmd
docs/: README.md  accuracy_logging_system.md  architecture_for_analysts.md  cli_reference.md  development_setup.md  openrouter_guide.md  prompt_engineering.md  rule-based-extraction.md
exploration/: discrepancy_insights.qmd  narrative_processing_explained.qmd
prompts/: README.md  prompt_metadata.json
prompts/health_data_extraction/: health_data_extraction_structured_v1.2.0.json  health_data_extraction_structured_v1.2.1.md  (+28 more)
scripts/: backfill_accuracy_metrics.py  batch_run_extraction.py  calculate_accuracy_metrics.py  download_historical_pdfs.py  download_latest_rulebased_csv.py  download_latest_who_pdf.py  migrate_single_run.py  migrate_sqlite_to_parquet.py  process_raw_extractions.py  run_extraction.py  run_extraction_gha.py  run_llm_extraction_gha.py  run_rule_based_extraction_gha.py  simple_batch_processor.py  weekly_ingest.py
src/: __init__.py  accuracy_evaluator.py  accuracy_metrics.py  compare.py  config.py  json_correction_pipeline.py  json_recovery.py  llm_client.py  llm_extract.py  llm_text_extract.py  main.py  parse_output.py  pdf_upload_extract.py  post_processing.py  prompt_logger.py  prompt_manager.py  prompt_manager_v2.py  rule_based_extract.py  run_id_manager.py  tabular_preprocessing_logger.py
tests/: test_compare.py  test_llm_extract.py  test_main.py  test_parse_output.py
(+68 files in other folders)
